src/objects/loan__Archive_Run__c.object
<CustomObject>
    <fields>
        <fullName>loan__Batch_Job_Name__c</fullName>
        <label>Batch Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Completed__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Results__c</fullName>
        <label>Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Run_Every_Units__c</fullName>
        <label>Hour/Day</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Run_Every__c</fullName>
        <label>Run Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Schedule_Status__c</fullName>
        <formula>CASE (loan__Status__c, &quot;Completed&quot;, &quot;---&quot;, IMAGE(
CASE(loan__Status__c, &quot;Scheduled&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Late&quot;, &quot;/img/samples/light_yellow.gif&quot;,&quot;Not Scheduled&quot;, &quot;/img/samples/light_red.gif&quot;,&quot;&quot;)
,&quot;Status&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Scheduled_Queries__c</fullName>
        <label>Scheduled Query</label>
        <referenceTo>loan__Scheduled_Queries__c</referenceTo>
        <relationshipLabel>Archive Runs</relationshipLabel>
        <relationshipName>Archive_Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Scheduled_To_Run__c</fullName>
        <label>Scheduled To Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <formula>if ( not(isnull( loan__Completed__c )), &quot;Completed&quot;, if(isnull( loan__Scheduled_To_Run__c ),&quot;Not Scheduled&quot; , if( loan__Scheduled_To_Run__c &gt; now() , &quot;Scheduled&quot;, &quot;Late&quot; ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Trigger_Batch_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Batch Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Trigger_Scheduler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <label>Archive Run</label>
    <nameField>
        <displayFormat>ARID-{0000000000}</displayFormat>
        <label>Archive Run ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>